fix(cli): all routes should return proper problem+json
